@@ -1,0 +1,43 @@
+  ***   at top-level: nfsplitting(1)
+  ***                 ^--------------
+  *** nfsplitting: incorrect type in nfsplitting (t_INT).
+x
+x
+x
+x^120 + 900*x^116 + 508450*x^112 + 3093750*x^110 + 233445700*x^108 + 6244625
+000*x^106 + 86356219375*x^104 + 6147962343750*x^102 - 9942720082555*x^100 + 
+3349338126562500*x^98 - 1654757011326100*x^96 + 1309871930885937500*x^94 + 1
+2436255994792015950*x^92 + 627622053389650906250*x^90 + 10990443401191124447
+575*x^88 + 376988045414723757750000*x^86 + 5753330797521192519076250*x^84 + 
+177095246957480012540937500*x^82 + 2532236050928665494862464460*x^80 + 66602
+887475268525125564843750*x^78 + 900151039266122540911840715400*x^76 + 176011
+62771342375630639534375000*x^74 + 297430062665456220256577151477075*x^72 + 2
+930309217240262538594060043562500*x^70 + 72799466070683508609604970583641825
+*x^68 + 544024340743931708706461811877750000*x^66 + 815192787279703050465510
+9860308253125*x^64 + 109815744628769444357250042241632031250*x^62 + 14587139
+1991398970515017378630342573815*x^60 + 8649858988205592244458199943754150781
+250*x^58 - 28260531870665143418958164521279483618600*x^56 - 4028396539193675
+80525292500109637748437500*x^54 + 106953851435466039913768978932670329879545
+0*x^52 - 117799258418763740543911272144086881778781250*x^50 + 21225667468078
+1774826232152789145244306484575*x^48 - 1157371878847856250227888707333507692
+960375000*x^46 - 60605754850991956455326492294916133973935406250*x^44 - 2931
+8354970878696157506850322206226355212812500*x^42 + 2969007992022620344286139
+006599749400952695117330*x^40 + 18940874618289173736585545257929220177884468
+75000*x^38 - 462258652890221831497176176774279926624850728121600*x^36 - 7387
+86176377220399331352006274159764367952001562500*x^34 - 271554668935406462553
+6181765731364171583296080250050*x^32 + 9040698598507624900324513465462196895
+3701672354656250*x^30 + 6671002781929457078914865848663080213892617538608397
+00*x^28 + 8674210771396452568056517384098059387025568935299000000*x^26 + 398
+10727829888294052738784121978440350534098819581529375*x^24 + 165091395418543
+016833097401882144226762030772580167343750*x^22 + 27455383835034865960434299
+3914027364500470431599325551949*x^20 + 5727389048071940962286881233887371037
+10592833161132812500*x^18 + 680363944593316626764117242129370969026933149388
+6975000*x^16 + 1207367254754819680587174702262138380906821896553743750000*x^
+14 + 1324631954910684324357431850891744535485699735726160156250*x^12 - 24458
+13956434295007552447734476548803933624572506738281250*x^10 + 309719742207326
+9812049512199025218992726116649855468750000*x^8 + 34385172087788316066248428
+61577883803163997230102539062500*x^6 - 3386560639084519090735630415918618954
+238015795898437500000*x^4 + 105395630279973820390312384403539563373280780029
+2968750000*x^2 + 1865600384408017914532215685346909435223786258697509765625
+x^32 - 10356*x^24 + 127847862*x^16 - 11069073684*x^8 + 565036352721
+Total time spent: 36
